# asciify

./: Cargo.toml  LICENSE  README.md  confusables.json  manuallyDetect.json
src/: lib.rs  main.rs
