[package]
name = "asciify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.2"
lazy_static = "1.4.0"
log = "0.4.20"
once_cell = "1.19.0"
regex = "1.10.3"
serde_json = "1.0.113"
unicode-segmentation = "1.11.0"
